# sonatino-idf

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
components/daisysp/: CMakeLists.txt  daisysp_patch.py  patch.py
components/daisysp/shim/: dsp.h
main/: CMakeLists.txt  audioconfig.c  audioconfig.cpp  audioconfig.h  main.c  main.cpp
